infra/k8s/k8s-with-internal-db/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tavi-api
  namespace: tavi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tavi-api
  template:
    metadata:
      annotations:
        prometheus.io/path: /api/metrics
        prometheus.io/port: "4000"
        prometheus.io/scrape: "true"
      labels:
        app: tavi-api
    spec:
      containers:
        - name: api
          image: ghcr.io/mkronvold/tavi-api:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4000
          volumeMounts:
            - name: tavi-backups
              mountPath: /var/tavi/backups
          readinessProbe:
            httpGet:
              path: /api/health
              port: 4000
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/health
              port: 4000
            initialDelaySeconds: 20
            periodSeconds: 20
      volumes:
        - name: tavi-backups
          persistentVolumeClaim:
            claimName: tavi-backups
