infra/k8s/k8s-with-internal-db/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tavi-worker
  namespace: tavi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tavi-worker
  template:
    metadata:
      annotations:
        prometheus.io/path: /metrics
        prometheus.io/port: "4100"
        prometheus.io/scrape: "true"
      labels:
        app: tavi-worker
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: worker
          image: ghcr.io/mkronvold/tavi-worker:latest
          imagePullPolicy: IfNotPresent
          securityContext:
            seccompProfile:
              type: RuntimeDefault
            privileged: false
            runAsNonRoot: true
            runAsUser: 1000
            runAsGroup: 1000
            capabilities:
              drop:
                - ALL
            allowPrivilegeEscalation: false
          resources:
            requests:
              cpu: 200m
              ephemeral-storage: 64Mi
              memory: 256Mi
            limits:
              cpu: 1000m
              ephemeral-storage: 256Mi
              memory: 512Mi
          ports:
            - containerPort: 4100
          volumeMounts:
            - name: tavi-backups
              mountPath: /var/tavi/backups
          readinessProbe:
            httpGet:
              path: /health
              port: 4100
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 4100
            initialDelaySeconds: 20
            periodSeconds: 20
      volumes:
        - name: tavi-backups
          persistentVolumeClaim:
            claimName: tavi-backups
