infra/k8s/k8s-with-internal-db/postgres-headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tavi-postgres-headless
  namespace: tavi
spec:
  clusterIP: None
  selector:
    app: tavi-postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
